added functions